<resources>
    <string name="app_name">ZTPMobilProjekt</string>
    <string name="word_list_menu_button">List of words</string>
    <string name="start_quiz_button_text">Start quiz</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_button_text">Settings</string>
    <string name="luckyWord_button_text">Lucky Word</string>


    <!-- Quiz activity  -->
    <string name="quiz_Text_View">Fill the blanks</string>
    <string name="translate">Translate</string>
    <string name="fill_the_blanks">Fill the Blanks</string>
    <string name="check_button">Check</string>

    <!-- Quiz choice activity -->
    <string-array name="mode_options">
        <item>Fill the blanks</item>
        <item>Translate</item>
    </string-array>

    <string name="choice_text">Choose quiz mode</string>
    <string name="test_choice_button">Test mode</string>
    <string name="learn_choice_button">Learning mode</string>

    <!-- Quiz summary activity  -->
    <string name="quiz_summary_text">Your score is</string>
    <string name="quiz_summary_btn_text">Back</string>
    <string name="notification_title">CONGRATULATIONS</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Settings Preferences -->
    <string name="difficulty_settings_label">Difficulty</string>
    <string name="learning_language_label">Learning language</string>
    <string name="my_language_label">My language</string>
    <string name="app_language_label">App language</string>
    <string name="settings_back_button_text">Save</string>
    <string-array name="difficulty_options">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="learning_language_options">
        <item>Polish</item>
        <item>English</item>
    </string-array>

    <string-array name="my_language_options">
        <item>Polish</item>
        <item>English</item>
    </string-array>

    <string-array name="language_options">
        <item>PL</item>
        <item>EN</item>
    </string-array>


    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Wordlist menu settings -->
    <string name="menu_searchbar">Search</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_save_snap">Save snapshot</string>
    <string name="menu_load_snap">Load snapshot</string>
    <string name="load_failed">Snapshot load failed</string>

    <!-- EditWord prefs -->
    <string name="hint_word_difficulty">Difficulty</string>
    <string name="hint_word_polish">Polish</string>
    <string name="hint_word_english">English</string>
    <string name="button_save">SAVE</string>
    <string name="word_added">Word added</string>
    <string name="word_edited">Word edited</string>
    <string name="empty_not_saved">Changes not saved</string>

    <!-- Dictionary activity  -->
    <string name="dictionaryTitle">Dictionary</string>
    <string name="dictionary_edit_text">Type in word</string>
    <string name="dictionary_button_text">Search</string>
    <string name="definition_title_text_view">Definition</string>
    <string name="word_title_text_view">Word</string>
    <string name="phonetics_title_text_view">Phonetics</string>
    <string name="pos_title_text_view">Part of speech</string>
    <string name="dictionary_content">Content</string>
    <string name="request_success">Request Success</string>
    <string name="request_error">Request error</string>

    <!-- Lucky Word Activity -->
    <string name="lucky_title_text_view">YOUR LUCKY WORD IS</string>
    <string name="lucky_content_text_view">  </string>
    <string name="lucky_text_view">means</string>
    <string name="lucky_shake_text_view">Shake</string>
    <string name="lucky_latitude_title_view">Latitude</string>
    <string name="lucky_longitude_title_view">Longitude</string>

    <!-- Search Word activity -->
    <string name="easy_check_box">Easy</string>
    <string name="medium_check_box">Medium</string>
    <string name="hard_check_box">Hard</string>
    <string name="search_button">Search</string>
    <string name="search_language_text_view">Choose language</string>
    <string-array name="search_language_options">
        <item>Polish</item>
        <item>English</item>
    </string-array>
    <string name="search_success">Search successful</string>
    <string name="search_error">Search unsuccessful</string>


</resources>