<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DictionaryActivity"
    app:flow_verticalAlign="center">

    <TextView
        android:id="@+id/dictionaryTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/dictionaryTitle"/>

    <EditText
        android:id="@+id/wordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/dictionaryTitleTextView"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:hint="@string/dictionary_edit_text"/>

    <Button
        android:id="@+id/dictionaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/dictionary_button_text"/>

    <TextView
        android:id="@+id/wordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dictionaryButton"
        android:height="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/word_title_text_view"/>

    <TextView
        android:id="@+id/wordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordTitle"
        android:height="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dictionary_content"/>

    <TextView
        android:id="@+id/phoneticsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wordTextView"
        android:height="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/phonetics_title_text_view"/>

    <TextView
        android:id="@+id/phoneticsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneticsTitle"
        android:height="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dictionary_content"/>

    <TextView
        android:id="@+id/partOfSpeechTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneticsTextView"
        android:height="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/pos_title_text_view"/>

    <TextView
        android:id="@+id/partOfSpeechTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/partOfSpeechTitle"
        android:height="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dictionary_content"/>

    <TextView
        android:id="@+id/definitionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/partOfSpeechTextView"
        android:height="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/definition_title_text_view"/>

    <TextView
        android:id="@+id/definitionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/definitionTitle"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/dictionary_content"/>








</RelativeLayout>