<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LuckyWordActivity">

    <TextView
        android:id="@+id/luckyWordTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:text="@string/lucky_title_text_view" />

    <TextView
        android:id="@+id/luckyWordLearnTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/luckyWordTitleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        android:text="@string/lucky_content_text_view" />

    <TextView
        android:id="@+id/luckyWordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/luckyWordLearnTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:visibility="invisible"
        android:text="@string/lucky_text_view" />

    <TextView
        android:id="@+id/luckyWordMyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/luckyWordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="40sp"
        android:text="@string/lucky_content_text_view" />

    <TextView
        android:id="@+id/latitudeTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/luckyWordMyTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        android:text="@string/lucky_latitude_title_view" />

    <TextView
        android:id="@+id/latitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitudeTitleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/lucky_content_text_view"/>

    <TextView
        android:id="@+id/longitudeTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitudeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:text="@string/lucky_longitude_title_view" />

    <TextView
        android:id="@+id/longitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitudeTitleView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/lucky_content_text_view"/>

    <TextView
        android:id="@+id/luckyWordShakeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:text="@string/lucky_shake_text_view" />


</RelativeLayout>