<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/search_language_text_view"/>

    <Spinner
        android:id="@+id/searchLanguageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp" />


    <EditText
        android:id="@+id/searchWordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:padding="@dimen/small_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        tools:context=".MainActivity">

        <CheckBox
            android:id="@+id/easyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_check_box"/>

        <CheckBox
            android:id="@+id/mediumCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_check_box"
            android:layout_marginStart="30dp"/>

        <CheckBox
            android:id="@+id/hardCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_check_box"

            android:layout_marginStart="30dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/search_word_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/buttonColor"
        android:text="@string/search_button" />

    <ListView
        android:id="@+id/search_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:visibility="invisible"/>


</LinearLayout>